Fix Dark Mode colors hovering navigation bar status tabs
Summary:
* Use `{$orange}` variable for warning text instead of hardcoding text color.
* On hover, use `{$alphagrey}` variable for warning and fail text instead of hardcoding text color.
This makes text readable in both dark mode and default mode.

Refs T15056

Test Plan:
* Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Go to http://phorge.localhost/uiexample/view/PHUIListExample/, look at the "Status Tabs" section, hover over items
* Repeat previous step with `Default Mode` instead of Dark Mode

Reviewers: O1 Blessed Committers, valerio.bozzolan

Reviewed By: O1 Blessed Committers, valerio.bozzolan

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26372

--- a/webroot/rsrc/css/phui/phui-list.css
+++ b/webroot/rsrc/css/phui/phui-list.css
@@ -250,7 +250,7 @@
 */
 
 .phui-list-item-warn .phui-list-item-href {
-  color: #bc7837;
+  color: {$orange};
 }
 
 .phui-list-item-fail .phui-list-item-href {
@@ -260,13 +260,13 @@
 .phui-list-item-warn.phui-list-item-selected .phui-list-item-href,
 .phui-list-item-warn .phui-list-item-href:hover {
   background: {$lightyellow};
-  color: #bc7837;
+  color: rgba({$alphagrey},.9);
 }
 
 .phui-list-item-fail.phui-list-item-selected .phui-list-item-href,
 .phui-list-item-fail .phui-list-item-href:hover {
   background: {$lightred};
-  color: {$red};
+  color: rgba({$alphagrey},.9);
 }
 
 .phui-list-item-warn.phui-list-item-selected .phui-list-item-href:hover {
